--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "hls.js": "^1.5.3",
     "next": "14.0.3",
+    "plyr": "^3.7.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
